--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -11,10 +11,10 @@
 
     <string name="i_description">在英式英语中/i/音标通常写作/i:/，两个点代表发长音。但是在美式发音中加点与不加点没多大区别。所以美式音标不加两个点。它在浊辅音前发长音，清辅音前发短音。</string>
     <string name="a_description">在英式英语中/ɑ/音标通常写作/ɑː/。注意在美式英语中它的发音与/ʌ/有很大区别。还有/ɑ/与汉语拼音中\"a\"也不同。（在国际音标中，汉语拼音的\"a\"写作/a/）。</string>
-    <string name="u_description">在英式英语中/u/音标通常写作/uː/，但是像/iː/、/aː/、/ɔː/这些元音的点在美式英语中长元音不必加点。美式英语中所有重读的元音在浊辅音前发长音，清辅音前发短音。</string>
-    <string name="i_short_description">/ɪ/与/i/发音不同。在长音与短音方面区别不是很大，最主要的区别是你嘴型的大小和舌头的位置。跟/i/音比起，嘴要稍微再咧开一点，舌头的放置要靠后一点。</string>
+    <string name="u_description">在英式英语中/u/音标通常写作/uː/，但是像/iː/、/aː/、/ɔː/这些长元音的点在美式英语中不必加。美式英语中所有重读的元音在浊辅音前发长音，清辅音前发短音。</string>
+    <string name="i_short_description">/ɪ/与/i/发音不同。在长音与短音方面区别不是很大，最主要的区别是你嘴型的大小和舌头的位置。跟/i/音相比，嘴要稍微再咧开一点，舌头的放置要靠后一点。</string>
     <string name="u_short_description">/ʊ/与/u/发音不同。在长音与短音方面区别不是很大，而是嘴型的大小和舌头的位置。</string>
-    <string name="v_upsidedown_description">/ʌ/与/ɑ/读音不同。在长音与短音方面区别不是很大，而是嘴型的大小和舌头的位置。注意它的发音与英式英语/ʌ/音标的发音稍微有所不同。当/ʌ/不读成重音时，通常写作成/ə/。</string>
+    <string name="v_upsidedown_description">/ʌ/与/ɑ/读音不同。在长音与短音方面区别不是很大，而是嘴型的大小和舌头的位置。注意它的发音与英式英语/ʌ/音标的发音稍微有所不同。当/ʌ/不读成重音时，通常写成/ə/。</string>
     <string name="e_short_description">英式英语的音标中使用/e/音标来表示这个发音。实际上，根据标准国际音标它应该被写成/ɛ/。嘴张开的程度比/æ/小，舌尖更靠前一点。</string>
     <string name="ae_description">"发/æ/音时，嘴张开的程度要像/ɑ/一样大，嘴角像/ɛ/那样拉向两边，但舌头应该比/ɛ/更往后一些。</string>
     <string name="c_backwards_description">根据国际音标，美式英语中使用的/ɔ/这个音标应该被写成/ɒ/，但为了和大多数词典保持一致，我们使用了/ɔ/。（注意，/ɔː/用于英式音标时发音是不一样的，英式音标的/ɔː/是标准国际音标。）大约40%的美国人不发这个音，他们用/ɑ/代替，上述的例子可以这样发音：/ɑt/，/kɑt/，和/sɑ/。</string>
@@ -29,10 +29,10 @@
     <string name="ar_description">根据国际音标更加正确地写法是/ɑɹ/或者/ɑɚ/。英式英语中没有/ɑr/音，美国人发/ɑr/的单词中英国人发/ɑː/音。</string>
     <string name="er_description">根据国际音标更加正确的写法是/ɛɹ/或者/ɛɚ/。英式英语中没有/ɛr/音，美国人发/ɛr/的单词中英国人发/eə/音。</string>
     <string name="ir_description">根据国际音标更加正确的写法是/ɪɹ/或者/ɪɚ/。英式英语中没有/ɪr/音，美国人发/ɑr/的单词中英国人发/ɪr/音。</string>
-    <string name="or_description">根据国际音标更加正确呢写法是/ɔɹ/或者/ɔɚ/。/ɔr/中的ɔ与此应用中的/ɔ/发音不同。（这是因为在美式英语中，/ɔ/应该写为/ɒ/。）读/ɔr/时，口型由小而圆开始。英式英语中没有/ɔr/音，美国人发/ɔr/的单词中英国人发/ɔ:/音。</string>
-    <string name="p_description">位于词首时是送气音[pʰ]，但在字母s后和词尾时是不送气的[p]（跟汉语拼音的\"b\"音一样）。注意不要把第三个例子读成/stapə/。</string>
-    <string name="t_description">位于词首时是送气音[tʰ]，但在字母s后和词尾时是不送气的[t]（跟汉语拼音的\"d\"音一样）。注意不要把第三个例子读成/ɪtə/，/ɪts/或/ɪtʰ/，还要注意\"t\"在美式英语发音中经常改变发音，像/ɾ/和/ʔ/。</string>
-    <string name="k_description">位于词首时是送气音[kʰ]，但在字母s后和词尾时是不送气的[k]（跟汉语拼音的\"g\"音一样）。注意不要把第三个例子读成/wikə/。</string>
+    <string name="or_description">根据国际音标更加正确的写法是/ɔɹ/或者/ɔɚ/。/ɔr/中的ɔ与此应用中的/ɔ/发音不同。（这是因为在美式英语中，/ɔ/应该写为/ɒ/。）读/ɔr/时，口型由小而圆开始。英式英语中没有/ɔr/音，美国人发/ɔr/的单词中英国人发/ɔ:/音。</string>
+    <string name="p_description">位于词首时是送气音[pʰ]，但在字母s后和词尾时是非送气的[p]（跟汉语拼音的\"b\"音一样）。注意不要把第三个例子读成/stapə/。</string>
+    <string name="t_description">位于词首时是送气音[tʰ]，但在字母s后和词尾时是非送气的[t]（跟汉语拼音的\"d\"音一样）。注意不要把第三个例子读成/ɪtə/，/ɪts/或/ɪtʰ/，还要注意\"t\"在美式英语发音中经常改变发音，像/ɾ/和/ʔ/。</string>
+    <string name="k_description">位于词首时是送气音[kʰ]，但在字母s后和词尾时是非送气的[k]（跟汉语拼音的\"g\"音一样）。注意不要把第三个例子读成/wikə/。</string>
     <string name="b_description">注意/b/在单词词尾的发音，不要把第三个例子读成/rɪbə/或者是/rɪp/。英语中的/b/和汉语拼音中的\"b\"不同。</string>
     <string name="d_description">注意/d/在单词词尾的发音，不要把第三个例子读成/kɑrdə/或者是/kɑrt/。英语中的/d/和汉语拼音中的\"d\"不同。</string>
     <string name="g_description">注意/g/在单词词尾的发音，不要把第三个例子读成/pɪgə/或者是/pɪk/。英语中的/g/和汉语拼音中的\"g\"不同。</string>
