--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -16,7 +16,7 @@
     <string name="u_short_description">/ʊ/与/u/发音不同。在长音与短音方面区别不是很大，而是嘴型的大小和舌头的位置。</string>
     <string name="v_upsidedown_description">/ʌ/与/ɑ/读音不同。在长音与短音方面区别不是很大，而是嘴型的大小和舌头的位置。注意它的发音与英式英语/ʌ/音标的发音稍微有所不同。当/ʌ/不读成重音时，通常写成/ə/。</string>
     <string name="e_short_description">英式英语的音标中使用/e/音标来表示这个发音。实际上，根据标准国际音标它应该被写成/ɛ/。嘴张开的程度比/æ/小，舌尖更靠前一点。</string>
-    <string name="ae_description">"发/æ/音时，嘴张开的程度要像/ɑ/一样大，嘴角像/ɛ/那样拉向两边，但舌头应该比/ɛ/更往后一些。</string>
+    <string name="ae_description">发/æ/音时，嘴张开的程度要像/ɑ/一样大，嘴角像/ɛ/那样拉向两边，但舌头应该比/ɛ/更往后一些。</string>
     <string name="c_backwards_description">根据国际音标，美式英语中使用的/ɔ/这个音标应该被写成/ɒ/，但为了和大多数词典保持一致，我们使用了/ɔ/。（注意，/ɔː/用于英式音标时发音是不一样的，英式音标的/ɔː/是标准国际音标。）大约40%的美国人不发这个音，他们用/ɑ/代替，上述的例子可以这样发音：/ɑt/，/kɑt/，和/sɑ/。</string>
     <string name="schwa_description">元音/ə/是美式发音中最常见的一个音。它常用于非重读音节的单词。当此元音重读时通常写成/ʌ/。</string>
     <string name="ei_description">/eɪ/是双元音。它由/e/和/ɪ/两个单音组成。在有些美式发音的词典中有时也写成/e/。不要与英式音标/e/混淆，事实上它发/ɛ/音，美式英语中带/eɪ/音的词，英式英语中的发音应该为/ɛi/。但是它们依旧都写成/eɪ/。</string>
