--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -16,7 +16,7 @@
     <string name="u_short_description">/ʊ/與/u/發音不同。在長音與短音方面區別不是很大，而是嘴型的大小和舌頭的位置。</string>
     <string name="v_upsidedown_description">/ʌ/與/ɑ/讀音不同。在長音與短音方面區別不是很大，而是嘴型的大小和舌頭的位置。注意它的發音與英式英語/ʌ/音標的發音稍微有所不同。當/ʌ/不讀成重音時，通常寫成/ə/。</string>
     <string name="e_short_description">英式英語的音標中使用/e/音標來表示這個發音。實際上，根據標準國際音標它應該被寫成/ɛ/。嘴張開的程度比/æ/小，舌尖更靠前一點。</string>
-    <string name="ae_description">"發/æ/音時，嘴張開的程度要像/ɑ/一樣大，嘴角像/ɛ/那樣拉向兩邊，但舌頭應該比/ɛ/更往後一些。</string>
+    <string name="ae_description">發/æ/音時，嘴張開的程度要像/ɑ/一樣大，嘴角像/ɛ/那樣拉向兩邊，但舌頭應該比/ɛ/更往後一些。</string>
     <string name="c_backwards_description">根據國際音標，美式英語中使用的/ɔ/這個音標應該被寫成/ɒ/，但為了和大多數詞典保持一致，我們使用了/ɔ/。（注意，/ɔː/用於英式音標時發音是不一樣的，英式音標的/ɔː/是標準國際音標。）大約40%的美國人不發這個音，他們用/ɑ/代替，上述的例子可以這樣發音：/ɑt/，/kɑt/，和/sɑ/。</string>
     <string name="schwa_description">元音/ə/是美式發音中最常見的一個音。它常用於非重讀音節的單詞。當此元音重讀時通常寫成/ʌ/。</string>
     <string name="ei_description">/eɪ/是雙元音。它由/e/和/ɪ/兩個單音組成。在有些美式發音的詞典中有時也寫成/e/。不要與英式音標/e/混淆，事實上它發/ɛ/音，美式英語中帶/eɪ/音的詞，英式英語中的發音應該為/ɛi/。但是它們依舊都寫成/eɪ/。</string>
