added Russian and Dark Theme

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,12 +11,12 @@
     <string name="u_short_description">Чтобы сказать /ʊ/, сделайте ваши губы круглыми, примерно такими же большими, как если бы вы сосали большой палец. Иногда /ʊ/ пишется неправильно как /u/, но его следует писать /ʊ/ (без "хвоста"). /u/ и /ʊ/ - это два очень разных гласных.</string>
     <string name="v_upsidedown_description">Сделайте /ʌ/ с открытым ртом примерно на ширину одного пальца. Однако ваши губы и язык должны быть расслаблены. Это совсем другой звук, чем /ɑ/. Разница заключается не столько в длинном и коротком, сколько в различном положении рта и языка. Обратите внимание, что он также произносится несколько иначе, чем британский звук, который также обычно пишется /ʌ/. Когда этот звук находится в безударном слоге, он пишется /ə/.</string>
     <string name="e_short_description">Многие словари и учебники, описывающие британский английский язык, используют символ /e/ для этого звука. Однако, согласно IPA, это должно быть написано /ɛ/. Рот открыт меньше, чем с /æ/, а язык немного больше вперед.</string>
-    <string name="ae_description">Растяните ваши губы широко, как /ɛ/, но откройте рот большой, как /ɑ/. Ваш язык должен быть дальше назад, чем с /ɛ/.</string>
+    <string name="ae_description">Растяните ваши губы широко, как /ɛ/, но откройте рот больше, как /ɑ/. Ваш язык должен быть дальше назад, чем с /ɛ/.</string>
     <string name="c_backwards_description">/ɔ/ следует записать /ɒ/ По данным IPA. Однако, чтобы соответствовать большинству словарей, здесь используется /ɔ/. Обратите внимание, что это не тот же самый звук, как когда /ɔː/ используется для описания британского произношения. Он тоже не такой же звук как в ɔ /ɔɪ/ или /ɔr/ (британский английский /ɔː/ такой же, как в ɔ /ɔɪ/ или /ɔr/). Около 40% американцев не произносят звук /ɔ/. Они заменяют его звуком /ɑ/. Приведенные примеры будут произноситься как  /ɑt/, /kɑl/ и /sɑ/. Слова \"cot\" и \"caught\"" также будет произносится одинаково (/kɑt/).</string>
     <string name="schwa_description">Гласный /ə/ является наиболее распространенным звуком в американском английском языке из-за его использования в безударных слогах и словах. Это называется шва. Когда этот звук находится в ударном слоге, он пишется /ʌ/.</string>
     <string name="ei_description">/eɪ/ дифтонг, сочетания /е/ и /ɪ/ звуки. Иногда он также пишется как /e/ в некоторых американских английских словарях. (Не путайте это с британским английским символом /e/, который на самом деле произносится как /ɛ/.) Слова с американским английским звуком /eɪ/ произносятся /ɛɪ/ в британском английском языке. Однако они все равно пишут его как /eɪ/.</string>
     <string name="ai_description">/aɪ/ дифтонг, сочетание /a/ и /ɪ/ звуки. Обратите внимание, что /a/ - это не совсем тот же звук, что и /ɑ/.</string>
-    <string name="au_description">/aʊ/ дифтонг, сочетание /a/ и /ʊ/ звуки. Обратите внимание, как рты начинаются большими и широкими, а становятся маленькими и круглыми.</string>
+    <string name="au_description">/aʊ/ дифтонг, сочетание /a/ и /ʊ/ звуки. Обратите внимание, как рот начинается большими и широким, а становятся маленьким и круглым.</string>
     <string name="oi_description">/ɔɪ/ дифтонг, сочетание /ɔ/ и /ɪ/ звуки. "Ɔ", используемое в /ɔɪ/, не является тем же звуком, что и /ɔ/ в этом приложении. (Это потому, что /ɔ/, используемый для описания многих американских английских слов, на самом деле должен быть написан /ɒ/.) Звук /ɔɪ/ начинается с маленьких округлых губ.</string>
     <string name="ou_description">/oʊ/ дифтонг, сочетание /o/ и /ʊ/ звуки. Некоторые словари просто пишут его как /o/, и на самом деле было бы более точно использовать /o/, а не дифтонг для некоторых слов. Обратите внимание, что существует небольшое отличие от британского произношения /əʊ/.</string>
     <string name="er_stressed_description">Звук /ɝ/ иногда пишется /ər/ или /əɹ/. Это звук в ударном слоге или односложном слове. Когда /ɝ/ не нажата, то пишется /ɚ/. В британском английском языке /ɝ/ произносится как /ɜː/.</string>
@@ -25,7 +25,7 @@
     <string name="er_description">Звук /ɛr/ более правильно пишется /ɛɹ/ или /ɛɚ/ в соответствии с IPA. Оно произносится и пишется как /eə/ на британском английском языке.</string>
     <string name="ir_description">Звук /ɪr/ более правильно пишется /ɪɹ/ или /ɪɚ/ в соответствии с IPA. Оно произносится как /ɪə/ на британском английском языке.</string>
     <string name="or_description">"ɔ", используемое в /ɔr/, не является тем же звуком, что и /ɔ/ в этом приложении. (Это потому, что /ɔ/, используемый для описания многих американских английских слов, должен быть написан /ɒ/.) Звук /ɔr/ начинается с маленьких округлых губ. Это более правильно написано /ɔɹ/ или /ɔɚ/ в соответствии с IPA. Он произносится как /ɔː/ в британском английском языке.</string>
-    <string name="p_description">/p/ - это глухие согласные. /p/ аспирируется ([pʰ]) в начале слов, но не аспирируется ([p]) после /s/ и в конце слова. Гласные имеют более короткий звук, когда они приходят перед /р/.  Пр: Аспирация в фонетике — см. Придыхание.</string>
+    <string name="p_description">/p/ - это глухие согласные. /p/ аспирируется ([pʰ]) в начале слов, но не аспирируется ([p]) после /s/ и в конце слова. Гласные имеют более короткий звук, когда они находятся перед /р/.  Пр: Аспирация в фонетике — см. Придыхание.</string>
     <string name="t_description">/t/ - это глухие согласные. /t/ вдыхается ([tʰ]) в начале слов, но не вдыхается ([t]) после /s/ и в конце слова. Будьте осторожны, чтобы не прочитать третий пример [ɪtə] или [ɪtʰ] или [ɪts]. Также обратите внимание, что буква \"Т\" часто меняет свое произношение в американском английском языке. См. /ʔ/ и /ɾ/. Гласные имеют более короткий звук, когда они находятся перед /t/.</string>
     <string name="k_description">/k/ - это глухие согласные. /k/ вдыхается ([kʰ]) в начале слов, но не вдыхается ([k]) после /s/ и в конце слова. Гласные имеют более короткий звук, когда они находятся перед /k/.</string>
     <string name="b_description">/b/ - это звонкий согласный. Ваши губы и рот находятся в том же положении, что и звук /p/. Гласные имеют более длинный звук, когда они находятся перед /b/.</string>
@@ -51,7 +51,7 @@
     <string name="r_description">/r/ - это звонкий согласный. Этот звук должен быть записан /ɹ/ в соответствии с IPA. (IPA /r/ на самом деле является вибрирующим r.) однако, чтобы сохранить согласованность со многими словарями и учебниками, здесь используется символ /r/. Для "R" в конце слогов и слов, это приложение использует /ɝ/, /ɚ/ и /r/ (как в /ɑr/, /ɛr/, /ɪr/ и /ɔr/).</string>
     <string name="glottal_stop_description">Звук /ʔ/ называется глоттальной остановкой. Это не всегда преподается в английских учебниках, но это важная часть американского английского произношения. Обратите внимание на разницу в произношении слова " put " здесь и в примере для звука /ʊ/. Звук /ʔ/ часто заменяет /t/, особенно в конце слов и в середине предложений.</string>
     <string name="flap_t_description">Звук /ɾ/ (не /r/) называется лоскутом т или альвеолярным краном. Он обычно не преподается в английских учебниках, но это важная часть американского английского произношения. Звук /ɾ/ часто заменяет /t/, особенно когда /t/ появляется между гласными в безударном слоге. Звук /ɾ/ также может быть записан /d/, хотя это не так точно. В этом случае примеры были бы написаны /\'wɑdɚ/, /\'lɪdəl/, ɑnd /\'θɝdi/.</string>
-    <string name="app_name">Произношение</string>
+    <string name="app_name">ААП</string>
     <string name="main_menu_keyboard">Клавиатура</string>
     <string name="main_menu_about">О</string>
     <string name="main_menu_history">История</string>
@@ -77,7 +77,7 @@
     <string name="test_results_time">Продолжительность времени: %1$s</string>
     <string name="test_results_practice_difficult_button">Практиковать сложные звуки</string>
     <string name="title_activity_history">История</string>
-    <string name="history_time_title">Общее затраченое время:</string>
+    <string name="history_time_title">Время:</string>
     <string name="history_test_title">Тесты:</string>
     <string name="history_details">Подробности</string>
     <string name="title_activity_history_time">Общее затраченое время</string>
